--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,7 @@ install! 'cocoapods', :deterministic_uuids => false
 
 target 'coursestudio' do
   config = use_native_modules!
+  config = use_frameworks!
 
   # Flags change depending on the env values.
   flags = get_default_flags()
@@ -28,7 +29,7 @@ target 'coursestudio' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  # use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
