--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-native-firebase/app": "^15.0.0",
+    "@react-native-firebase/auth": "^15.0.0",
+    "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -25,7 +28,6 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-fast-image": "^8.5.11",
     "react-native-get-random-values": "^1.8.0",
-    "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-size-matters": "^0.4.0",
