--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.2",
     "@shopify/restyle": "1.6.1",
+    "dayjs": "^1.11.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-fast-image": "^8.5.11",
     "react-native-get-random-values": "^1.8.0",
     "react-native-modal-popover": "^2.1.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-size-matters": "^0.4.0",
