--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "prestorybook": "rnstl"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-native-community/slider": "^4.2.3",
     "@react-native-firebase/app": "^15.0.0",
     "@react-native-firebase/auth": "^15.0.0",
     "@react-native-google-signin/google-signin": "^7.2.2",
@@ -28,9 +30,11 @@
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-fast-image": "^8.5.11",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-modal-popover": "^2.1.0",
     "react-native-progress": "^5.0.0",
+    "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-size-matters": "^0.4.0",
