--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "@reduxjs/toolkit": "^1.8.2",
+    "@reduxjs/toolkit": "1.8.1",
     "@shopify/restyle": "1.6.1",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-dotenv": "^3.3.1",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-get-random-values": "^1.8.0",
@@ -40,7 +40,7 @@
     "react-native-size-matters": "^0.4.0",
     "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-svg": "^12.3.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "7.2.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
