--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-size-matters": "^0.4.0",
     "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-svg": "^12.3.0",
+    "react-native-track-player": "^2.1.3",
     "react-redux": "7.2.8",
     "uuid": "^8.3.2"
   },
