added fix for player issue in android

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,10 +51,10 @@ allprojects {
         google()
         maven { url 'https://www.jitpack.io' }
 
-        jcenter() {
-            content {
-                includeGroup("com.google.android.exoplayer")
-            }
-        }
+        // jcenter() {
+        //     content {
+        //         includeGroup("com.google.android.exoplayer")
+        //     }
+        // }
     }
 }
