--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^12.3.0",
-    "react-native-track-player": "^2.1.3",
+    "react-native-track-player": "^2.2.0-rc4",
     "react-redux": "7.2.8",
     "uuid": "^8.3.2"
   },
