--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-fast-image": "^8.5.11",
+    "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-modal-popover": "^2.1.0",
@@ -41,6 +42,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-track-player": "^2.2.0-rc4",
     "react-redux": "7.2.8",
+    "rn-fetch-blob": "^0.12.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
